Slowly incorporating old files into new framework
