# api/Models/BoardDisplay.cs
@@ -1,7 +1,0 @@
-namespace api.models
-{
-    public class BoardDisplay
-    {
-        public List<BoardDisplayRow> Rows { get; set; } = new List<BoardDisplayRow>();
-    }
-}
